kubernetes/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: homelab
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
      - name: qbittorrent
        image: lscr.io/linuxserver/qbittorrent:latest
        resources:
          requests:
            memory: 256Mi
          limits:
            memory: 3Gi
        ports:
        - containerPort: 8080
        - containerPort: 6881
          protocol: TCP
        - containerPort: 6881
          protocol: UDP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: qbittorrent-config-pvc
      - name: downloads
        hostPath:
          path: /media/downloads
